Fix add note modal on mobile screens

--- a/src/style.css
+++ b/src/style.css
@@ -469,8 +469,8 @@ header img {
     font-size: 0.5rem;
   }
   #add-note {
-    top: 20%;
-    left: 15%;
+    top: 25%;
+    left: 20%;
     width: 200px;
   }
   #note-result {
